samples/_failures_safe/1761040454_0f9b65_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c735bfd8.c: In function ‘main’:
./samples/SAFE/__tmp_c735bfd8.c:147:64: error: expected ‘)’ at end of input
  147 |     printf("\nMost severe level present: %s\n", level_to_string
      |           ~                                                    ^
      |                                                                )
./samples/SAFE/__tmp_c735bfd8.c:147:5: error: expected declaration or statement at end of input
  147 |     printf("\nMost severe level present: %s\n", level_to_string
      |     ^~~~~~
